# breadmin-conductor

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  review.yml
docs/design/: HLD.md
docs/research/: 01-agent-tool-in-p-mode.md  02-session-continuity.md  03-error-handling.md  04-configuration.md  05-logging-observability.md  06-security-threat-model.md  08-usage-scheduling.md  10-settings-mcp-injection.md  102-explore-subagent-auto-trigger.md  11-api-key-rotation.md  12-subprocess-token-overhead.md  14-hang-detection.md  163-codex-cli-cost-reporting.md  164-gha-issues-event-trigger.md  17-credential-proxy.md  18-claudemd-opt-out.md  19-pretooluse-reliability.md  20-os-sandbox.md  23-429-error-cap-distinction.md  28-notion-mcp-oauth.md  31-permission-prompt-tool.md  36-multi-model-backends.md  37-cross-model-consensus.md  38-ci-server-deployment.md  40-telegram-integration.md  41-empirical-verification-suite.md  43-anthropic-key-proxy.md  51-sandbox-srt-integration.md  63-headless-overage-consumption.md  71-env-var-precedence-anthropic-base-url.md  73-hascompletedonboarding-bypass.md  75-sse-streaming-credential-proxy.md  79-bug-worker-design.md  81-disallowedtools-inheritance.md  87-http-402-json-body.md  94-disable-extra-usage-env-var.md
docs/specs/: TEMPLATE.md  calculator.md  v0.1.x-cold-start.md  v0.2.x-long-reach.md  v0.3.x-bullet-farm.md
src/brimstone/: __init__.py  beads.py  cli.py  config.py  health.py  logger.py  monitor.py  runner.py  session.py
src/composer/: cli.py  (+4 more)
tests/: conftest.py
(+55 files in other folders)
