[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breadmin-composer"
version = "0.1.0"
description = "Headless Claude Code orchestrator CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
impl-worker      = "composer.cli:impl_worker"
research-worker  = "composer.cli:research_worker"
design-worker    = "composer.cli:design_worker"
plan-issues      = "composer.cli:plan_issues"
plan-milestones  = "composer.cli:plan_milestones"
composer         = "composer.cli:composer"

[tool.hatch.build.targets.wheel]
packages = ["src/composer"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
